# littletitan

./: .gitignore  .gitmodules  README.md  format.sh  pyproject.toml  train.py  train.sh
.github/workflows/: format.yml
littletitan/: config_manager.py  optimizer.py  utils.py
littletitan/models/: __init__.py  model.py  token_dispatcher.py
littletitan/parallelisms/: __init__.py  parallel_dims.py  parallelize_moe.py
tests/: test_ep_token_dispatcher.py  test_token_dispatcher.py
train_configs/: debug_model.toml  deepseek_moe_16b.toml
