[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "littletitan"
version = "0.1.0"
description = "A MoE training framework built upon TorchTitan"
authors = [
    { name = "zhou fan", email = "1247714429@qq.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "isort",
    "autoflake",
]

[tool.black]
target-version = ["py310"]
extend-exclude = "third_party"

[tool.isort]
profile = "black"
extend_skip = ["third_party"]   

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 

